# hnhired

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: docker.yml
app/: __init__.py  db.py  ingest.py  main.py  parser.py  schemas.py
app/static/: app.js  index.html  styles.css
tests/: conftest.py  test_step1_health.py  test_step2_static.py  test_step3_jobs_api.py  test_step4_parser.py  test_step5_db.py  test_step6_ingest.py  test_step7_integration.py
