[project]
name = "hn-explorer"
version = "0.1.0"
description = "HN Who's Hiring explorer — FastAPI + Alpine.js, single container"
requires-python = ">=3.12"
dependencies = [
    "black>=26.1.0",
    "fastapi[standard]>=0.115.0",
    "httpx>=0.28.1",
    "ruff>=0.15.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
